# 365-days-of-code

./: README.md
barcodeGenerator/: README.md  barcodeGenerator.py  pyproject.toml
day1/random-quote-generator/: index.html  readme.md  script.js  style.css
day2/spectra/: README.md  index.html  script.js  style.css
day3/markdown-previewer/: README.me.md  index.html  readme.md  script.js  style.css
day4-dayx/weatherApp/: index.html  readme.md  script.js  style.css  utility.js
day60-dayx/onScreenKeyboard/: index.html  script.js  style.css
day8-dayx/: index.html  readme.md  script.js  style.css
day9-dayx/nebula/: README.md  index.html  package-lock.json  package.json  tasks
day9-dayx/nebula/src/: App.jsx  index.css
day9-dayx/nebula/src/constants/: APP_CONSTANTS.js  THEMES.js
notes/: authenticationNotes.md  promiseNotes.md
trigonometricIdentities/: main.py  pyproject.toml
trigonometricIdentities/media/Tex/: 08f976bc86c0cb9e.tex  0d4bd2bef600dce9.tex  19f9a696ed8ce8ad.tex  28bad7d1a134adfd.tex  413716e18632d020.tex  4f885cb43b37b0d7.tex  50e547597f6c5119.tex  57f5c26f73bb332e.tex  5960de6f5d50f589.tex  62f1c30f687dad3e.tex  64907418bf0667af.tex  6d94c9425664363c.tex  6e0b98ce42e1f60a.tex  74dec8576f8d2a77.tex  7691d97965c09441.tex  83fbb1a2c4290158.tex  8e3c7e4a65ed152a.tex  9114f33a2b89aadb.tex  986132d43ba02edf.tex  ae90f3fe254a61b7.tex  c565657f9c857417.tex  d12dd7a86bbe21f8.tex  da7d08ca602567e1.tex  e68b1f173fe736e3.tex  ebf1a9ffdc519417.tex  f046db25c9960747.tex  f61387da248ca5bf.tex  fd49d149b04d0bcf.tex  fe5f8bf5b81e3934.tex
(+57 files in other folders)
