[project]
name = "barcodegenerator"
version = "0.1.0"
description = "A simple command line application to generate barcodes"
authors = [
    {name = "Delta6626",email = "hassan911ee@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
